--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -43,7 +43,7 @@
         <div class="col text-right cart">
           <a href="#" class="cart-box">
             <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
-            <div class="cart-counter">0</div>
+            <div id="cart-counter" class="cart-counter">0</div>
           </a>
         </div>
       </div>
