--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -87,19 +87,20 @@ header {
         }
 
         .cart-counter {
-          width: 28px;
+          width: 68px;
           height: 27px;
           border-radius: 14px;
           background-color: $header-bg;
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: left;
           font-size: 14px;
           color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
-          right: 0;
+          right: -45%;
           transform: translate(50%, -50%);
+          padding-left: 10px;
         }
 
         &:hover {
