Add images of products and blog-posts

--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -8,6 +8,7 @@
       size: cover;
       position: center;
     }
+    background-image: url("https://picsum.photos/361/291/?blur");
 
     .details {
       padding: 15px 20px;
