--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -12,6 +12,7 @@
       position: center;
       repeat: no-repeat;
     }
+    background-image: url("https://picsum.photos/263/261/?blur");
     overflow: hidden;
     align-items: flex-end;
 
