Add hover state for buttons and price in product-box (_product-box.scss)

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -29,6 +29,20 @@
     .buttons {
       display: flex;
       justify-content: space-between;
+      visibility: hidden;
+    }
+  }
+
+  &:hover {
+    .buttons {
+      visibility: visible;
+    }
+    .price {
+      .btn-main {
+        color: #ffffff !important;
+        background-color: $primary;
+        text-decoration: none;
+      }
     }
   }
 
