Remove important from color and shorten white color in .btn-main (_product-box.scss)

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -39,7 +39,7 @@
     }
     .price {
       .btn-main {
-        color: #ffffff !important;
+        color: #fff;
         background-color: $primary;
         text-decoration: none;
       }
