--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading"><h3>New furniture</h3></div>
+        <div class="col-auto heading">
+          <h3>New furniture</h3>
+        </div>
         <div class="col menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
@@ -43,10 +45,76 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="product-box">
+          <div class="photo">
+            <div class="sale">sale</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="product-box">
+          <div class="photo">
+            <div class="sale">sale</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -74,7 +142,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -102,7 +172,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -130,7 +202,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -158,7 +232,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -186,63 +262,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
