--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -33,4 +33,9 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
+
+  &.active {
+    color: #fff;
+    background-color: $primary;
+  }
 }
