Justified hover animations (complete commit)

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -28,6 +28,7 @@ footer {
           white-space: nowrap;
 
           a {
+            @extend %transition-duration;
             font-size: 14px;
             line-height: 30px;
             color: rgb(169, 169, 169);
@@ -78,6 +79,7 @@ footer {
           margin-left: 1rem;
 
           a {
+            @extend %transition-duration;
             color: rgb(169, 169, 169);
             text-decoration: none;
 
