--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -45,21 +45,26 @@
         font-weight: 600;
 
         a {
+          @extend %transition-duration;
           color: rgb(42, 42, 42);
           position: relative;
           text-decoration: none;
           font-size: 18px;
           display: block;
-
+          &::before {
+            @extend %transition-duration;
+            content: "";
+            position: absolute;
+            bottom: -4px;
+            left: 0;
+            width: 100%;
+            border-bottom: 4px solid $primary;
+            opacity: 0;
+          }
           &.active,
           &:hover {
             &::before {
-              content: "";
-              position: absolute;
-              bottom: -4px;
-              left: 0;
-              width: 100%;
-              border-bottom: 4px solid $primary;
+              opacity: 1;
             }
           }
         }
@@ -80,6 +85,7 @@
         margin-left: 0.5rem;
 
         a {
+          @extend %transition-duration;
           display: block;
           width: 13px;
           height: 13px;
