--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,54 +1,79 @@
-.post-box {
-  margin-bottom: 2rem;
+a {
+  .post-box {
+    margin-bottom: 2rem;
 
-  .cover {
-    padding: 70% 25px 0 25px;
-    background: {
-      color: #f4f5f7;
-      size: cover;
-      position: center;
+    .cover {
+      padding: 70% 25px 0 25px;
+
+      background: {
+        color: #f4f5f7;
+        size: cover;
+        position: center;
+      }
+
+      .details {
+        padding: 15px 20px;
+        display: flex;
+        background-color: #ffffff;
+        font-size: 14px;
+        color: $text-color;
+
+        & > * {
+          flex: 1 1 auto;
+        }
+
+        .date {
+          text-align: left;
+        }
+
+        .comments {
+          text-align: right;
+        }
+      }
     }
 
-    .details {
-      padding: 15px 20px;
-      display: flex;
-      background-color: #ffffff;
-      font-size: 14px;
+    .post-info {
+      padding: 25px;
 
-      & > * {
-        flex: 1 1 auto;
+      h5 {
+        color: $text-color;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 1px;
       }
 
-      .date {
-        text-align: left;
+      p {
+        font-size: 14px;
+        line-height: 24px;
+        color: rgb(103, 103, 103);
+        text-align: justify;
       }
 
-      .comments {
-        text-align: right;
+      .more {
+        text-align: center;
+        padding-top: 30px;
+
+        button {
+          border: none;
+        }
       }
     }
   }
 
-  .post-info {
-    padding: 25px;
+  &:hover {
+    text-decoration: none;
+    color: $text-color;
 
-    h5 {
-      color: $primary;
-      font-size: 16px;
-      line-height: 24px;
-      letter-spacing: 1px;
-    }
+    .post-info {
+      h5 {
+        color: $primary;
+      }
 
-    p {
-      font-size: 14px;
-      line-height: 24px;
-      color: rgb(103, 103, 103);
-      text-align: justify;
-    }
-
-    .more {
-      text-align: center;
-      padding-top: 30px;
+      button {
+        color: #fff;
+        background-color: $primary;
+        text-decoration: none;
+      }
     }
   }
 }
