Add missing bootstrap grid classes to match RWD requirments

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading"><h3>New furniture</h3></div>
+        <div class="col-auto heading">
+          <h3>New furniture</h3>
+        </div>
         <div class="col menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
@@ -22,7 +24,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -46,11 +48,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -74,11 +78,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -102,11 +108,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -130,11 +138,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -158,11 +168,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -186,11 +198,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -214,11 +228,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -242,7 +258,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
