Add missing bootstrap grid classes to match RWD requirments

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,8 +2,10 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading"><h3>New furniture</h3></div>
-        <div class="col menu">
+        <div class="col-sm-4 heading">
+          <h3>New furniture</h3>
+        </div>
+        <div class="col-sm-12 col-md menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
             <li><a href="#">Chair</a></li>
@@ -22,15 +24,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-1">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -46,22 +46,19 @@
               <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
             <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+              <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-2">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -75,26 +72,28 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"
-                ><i class="fas fa-exchange-alt"></i
-              ></a>
+              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
+
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-3">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -108,26 +107,28 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"
-                ><i class="fas fa-exchange-alt"></i
-              ></a>
+              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
+
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-4">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -143,22 +144,26 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <<<<<<< HEAD <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+          </div>
+          <div class="price">
+            <div class="btn-main-small no-hover old-price">$ 120.00</div>
+            =======
             <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+              <div class="btn-main-small no-hover">$ 30.00</div>
+              >>>>>>> Add missing bootstrap grid classes to match RWD requirments
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-5">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -174,100 +179,120 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 120.00</div></div>
+            <<<<<<< HEAD <div class="price">
+              <div class="btn-main-small no-hover">$ 120.00</div>
           </div>
+          =======
+          <div class="price">
+            <div class="btn-main-small no-hover">$ 30.00</div>
+          </div>
+          >>>>>>> Add missing bootstrap grid classes to match RWD requirments
         </div>
       </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo pic-6">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
-            </div>
+    </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+      <div class="product-box">
+        <div class="photo pic-6">
+          <div class="sale">sale</div>
+          <div class="buttons">
+            <a href="#" class="btn-main-small">Quick View</a>
+            <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo pic-7">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 120.00</div></div>
+        <div class="content">
+          <h5>Aenean Ru Bristique</h5>
+          <div class="stars">
+            <a href="#" class="full"></a> <a href="#" class="full"></a>
+            <a href="#"></a> <a href="#"></a> <a href="#"></a>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo pic-8">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
+        <div class="line"></div>
+        <div class="actions">
+          <div class="outlines">
+            <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+            <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
           </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
-            </div>
+          <<<<<<< HEAD <div class="price">
+            <div class="btn-main-small no-hover">$ 100.00</div>
+        </div>
+        <div class="price">
+          <div class="btn-main-small no-hover old-price">$ 120.00</div>
+          =======
+          <div class="price">
+            <div class="btn-main-small no-hover">$ 30.00</div>
+            >>>>>>> Add missing bootstrap grid classes to match RWD requirments
           </div>
         </div>
       </div>
     </div>
+    <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+      <div class="product-box">
+        <div class="photo pic-7">
+          <div class="sale">sale</div>
+          <div class="buttons">
+            <a href="#" class="btn-main-small">Quick View</a>
+            <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+          </div>
+        </div>
+        <div class="content">
+          <h5>Aenean Ru Bristique</h5>
+          <div class="stars">
+            <a href="#" class="full"></a> <a href="#" class="full"></a>
+            <a href="#"></a> <a href="#"></a> <a href="#"></a>
+          </div>
+        </div>
+        <div class="line"></div>
+        <div class="actions">
+          <div class="outlines">
+            <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+            <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+          </div>
+          <<<<<<< HEAD <div class="price">
+            <div class="btn-main-small no-hover">$ 120.00</div>
+        </div>
+        =======
+        <div class="price">
+          <div class="btn-main-small no-hover">$ 30.00</div>
+        </div>
+        >>>>>>> Add missing bootstrap grid classes to match RWD requirments
+      </div>
+    </div>
   </div>
+  <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+    <div class="product-box">
+      <div class="photo pic-8">
+        <div class="sale">sale</div>
+        <div class="buttons">
+          <a href="#" class="btn-main-small">Quick View</a>
+          <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+        </div>
+      </div>
+      <div class="content">
+        <h5>Aenean Ru Bristique</h5>
+        <div class="stars">
+          <a href="#" class="full"></a> <a href="#" class="full"></a>
+          <a href="#"></a> <a href="#"></a> <a href="#"></a>
+        </div>
+      </div>
+      <div class="line"></div>
+      <div class="actions">
+        <div class="outlines">
+          <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+          <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+        </div>
+        <<<<<<< HEAD <div class="price">
+          <div class="btn-main-small no-hover">$ 100.00</div>
+      </div>
+      <div class="price">
+        <div class="btn-main-small no-hover old-price">$ 120.00</div>
+        =======
+        <div class="price">
+          <div class="btn-main-small no-hover">$ 30.00</div>
+          >>>>>>> Add missing bootstrap grid classes to match RWD requirments
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </div>
