Add pictures of products and blog's articles to images folder; Add background-images to product-box and post-box

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-1">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -52,7 +52,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-2">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -80,7 +80,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-3">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -108,7 +108,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-4">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -136,7 +136,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-5">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -164,7 +164,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-6">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -192,7 +192,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-7">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -220,7 +220,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo pic-8">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
