--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-4">
         <div class="post-box">
-          <div class="cover">
+          <div class="cover article-1">
             <div class="details">
               <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
               <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
@@ -35,7 +35,7 @@
       </div>
       <div class="col-4">
         <div class="post-box">
-          <div class="cover">
+          <div class="cover article-2">
             <div class="details">
               <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
               <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
@@ -54,7 +54,7 @@
       </div>
       <div class="col-4">
         <div class="post-box">
-          <div class="cover">
+          <div class="cover article-3">
             <div class="details">
               <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
               <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
