--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -12,9 +12,8 @@
       position: center;
       repeat: no-repeat;
     }
-    background-image: url("https://picsum.photos/263/261/?blur");
-    overflow: hidden;
-    align-items: flex-end;
+    background-size: 263px 261px;
+    background-position: center;
 
     .sale {
       position: absolute;
@@ -31,6 +30,37 @@
       display: flex;
       justify-content: space-between;
     }
+  }
+  .pic-1 {
+    background-image: url("../images/product1.jpg");
+  }
+
+  .pic-2 {
+    background-image: url("../images/product2.jpg");
+  }
+
+  .pic-3 {
+    background-image: url("../images/product3.jpg");
+  }
+
+  .pic-4 {
+    background-image: url("../images/product4.jpg");
+  }
+
+  .pic-5 {
+    background-image: url("../images/product5.jpg");
+  }
+
+  .pic-6 {
+    background-image: url("../images/product6.jpg");
+  }
+
+  .pic-7 {
+    background-image: url("../images/product7.jpg");
+  }
+
+  .pic-8 {
+    background-image: url("../images/product8.jpg");
   }
 
   .content {
