--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -56,8 +56,14 @@
           <form action="" class="search-form">
             <div class="category">
               <i class="fas fa-list-ul"></i>
-              <select name="" id="">
-                <option value="">Select a category</option>
+              <select name="category" id="category-list">
+                <option value="select-category">Select Category</option>
+                <option value="furniture">Furniture</option>
+                <option value="chair">Chair</option>
+                <option value="table">Table</option>
+                <option value="sofa">Sofa</option>
+                <option value="bedroom">Bedroom</option>
+                <option value="blog">Blog</option>
               </select>
               <i class="fas fa-caret-down"></i>
             </div>
