Add overflow:hidden to .photo in  _product-box.scss

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -12,6 +12,7 @@
       position: center;
       repeat: no-repeat;
     }
+    overflow: hidden;
     background-size: 263px 261px;
     background-position: center;
 
