--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -5,7 +5,7 @@
         <div class="col-auto heading">
           <h3>New furniture</h3>
         </div>
-        <div class="col menu">
+        <div class="col-sm-12 col-md menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
             <li><a href="#">Chair</a></li>
