--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading"><h3>New furniture</h3></div>
+        <div class="col-auto heading">
+          <h3>New furniture</h3>
+        </div>
         <div class="col menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
@@ -43,10 +45,12 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -71,10 +75,14 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -100,9 +108,13 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -130,7 +142,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -158,7 +172,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -186,7 +202,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -214,7 +232,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -242,7 +262,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
