Change markup of section blog posts, updated style of post box (#8)

--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading"><h3>Latest blog</h3></div>
+        <div class="col-auto heading">
+          <h3>Latest blog</h3>
+        </div>
         <div class="col"></div>
         <div class="col-auto dots">
           <ul>
@@ -15,61 +17,73 @@
     </div>
     <div class="row">
       <div class="col-4">
-        <div class="post-box">
-          <div class="cover article-1">
-            <div class="details">
-              <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
-              <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+        <a href="#">
+          <div class="post-box">
+            <div class="cover article-1">
+              <div class="details">
+                <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
+                <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+              </div>
+            </div>
+            <div class="post-info">
+              <h5>Products That Fight Static</h5>
+              <p>
+                Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
+                nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim
+                vehicula, rutrum magna in, ornare enim.
+              </p>
+              <div class="more">
+                <button href="#" class="btn-main">Read more</button>
+              </div>
+
             </div>
           </div>
-          <div class="post-info">
-            <h5>Products That Fight Static</h5>
-            <p>
-              Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
-              nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula,
-              rutrum magna in, ornare enim.
-            </p>
-            <div class="more"><a href="#" class="btn-main">Read more</a></div>
-          </div>
-        </div>
+        </a>
       </div>
       <div class="col-4">
-        <div class="post-box">
-          <div class="cover article-2">
-            <div class="details">
-              <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
-              <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+        <a href="#">
+          <div class="post-box">
+            <div class="cover article-2">
+              <div class="details">
+                <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
+                <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+              </div>
+            </div>
+            <div class="post-info">
+              <h5>Products That Fight Static</h5>
+              <p>
+                Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
+                nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim
+                vehicula, rutrum magna in, ornare enim.
+              </p>
+              <div class="more">
+                <button href="#" class="btn-main">Read more</button>
+              </div>
+
             </div>
           </div>
-          <div class="post-info">
-            <h5>Products That Fight Static</h5>
-            <p>
-              Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
-              nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula,
-              rutrum magna in, ornare enim.
-            </p>
-            <div class="more"><a href="#" class="btn-main">Read more</a></div>
-          </div>
-        </div>
+        </a>
       </div>
       <div class="col-4">
-        <div class="post-box">
-          <div class="cover article-3">
-            <div class="details">
-              <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
-              <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+        <a href="#">
+          <div class="post-box">
+            <div class="cover article-3">
+              <div class="details">
+                <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
+                <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+              </div>
+            </div>
+            <div class="post-info">
+              <h5>Products That Fight Static</h5>
+              <p>
+                Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
+                nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim
+                vehicula, rutrum magna in, ornare enim.
+              </p>
+              <div class="more"><button class="btn-main">Read more</button></div>
             </div>
           </div>
-          <div class="post-info">
-            <h5>Products That Fight Static</h5>
-            <p>
-              Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
-              nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula,
-              rutrum magna in, ornare enim.
-            </p>
-            <div class="more"><a href="#" class="btn-main">Read more</a></div>
-          </div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
