--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,35 +1,37 @@
-.post-box {
-  margin-bottom: 2rem;
+a {
+  .post-box {
+    margin-bottom: 2rem;
 
-  .cover {
-    padding: 70% 25px 0 25px;
-    background: {
-      color: #f4f5f7;
-      size: cover;
-      position: center;
+    .cover {
+      padding: 70% 25px 0 25px;
+
+      background: {
+        color: #f4f5f7;
+        size: cover;
+        position: center;
+      }
+
+      .details {
+        padding: 15px 20px;
+        display: flex;
+        background-color: #ffffff;
+        font-size: 14px;
+        color: $text-color;
+
+        & > * {
+          flex: 1 1 auto;
+        }
+
+        .date {
+          text-align: left;
+        }
+
+        .comments {
+          text-align: right;
+        }
+      }
     }
-
-    .details {
-      padding: 15px 20px;
-      display: flex;
-      background-color: #ffffff;
-      font-size: 14px;
-
-      & > * {
-        flex: 1 1 auto;
-      }
-
-      .date {
-        text-align: left;
-      }
-
-      .comments {
-        text-align: right;
-      }
-    }
-  }
-
-  .article-1 {
+    .article-1 {
     background-image: url("../images/blog01.jpg");
   }
 
@@ -40,27 +42,48 @@
   .article-3 {
     background-image: url("../images/blog03.jpg");
   }
+    .post-info {
+      padding: 25px;
 
-  .post-info {
-    padding: 25px;
+      h5 {
+        color: $text-color;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 1px;
+      }
 
-    h5 {
-      color: $primary;
-      font-size: 16px;
-      line-height: 24px;
-      letter-spacing: 1px;
+      p {
+        font-size: 14px;
+        line-height: 24px;
+        color: rgb(103, 103, 103);
+        text-align: justify;
+      }
+
+      .more {
+        text-align: center;
+        padding-top: 30px;
+
+        button {
+          border: none;
+        }
+      }
     }
+  }
 
-    p {
-      font-size: 14px;
-      line-height: 24px;
-      color: rgb(103, 103, 103);
-      text-align: justify;
-    }
 
-    .more {
-      text-align: center;
-      padding-top: 30px;
+  &:hover {
+    text-decoration: none;
+    color: $text-color;
+      .post-info {
+      h5 {
+        color: $primary;
+      }
+
+      button {
+        color: #fff;
+        background-color: $primary;
+        text-decoration: none;
+      }
     }
   }
 }
