Adding handling of active

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -65,4 +65,17 @@
       color: $primary;
     }
   }
+
+  &:active {
+    background-color: $primary;
+    border-color: $primary;
+
+    .icon::before {
+      border-color: $primary;
+    }
+
+    .content {
+      color: #ffffff;
+    }
+  }
 }
