--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -67,45 +67,48 @@ header {
 
     .cart {
       .cart-box {
-        display: inline-block;
-        position: relative;
+        display: flex;
+        justify-content: flex-end;
         color: #ffffff;
+        text-decoration: none;
 
-        .cart-icon {
-          background-color: $primary;
-          width: 55px;
-          height: 50px;
-          border-radius: 3px;
+        .box-line {
           display: flex;
           align-items: center;
-          justify-content: center;
-          font-size: 20px;
 
-          i {
-            margin-right: 5px;
-          }
-        }
-
-        .cart-counter {
-          width: 68px;
-          height: 27px;
-          border-radius: 14px;
-          background-color: $header-bg;
-          display: flex;
-          align-items: center;
-          justify-content: left;
-          font-size: 14px;
-          color: rgb(224, 227, 237);
-          position: absolute;
-          top: 50%;
-          right: -45%;
-          transform: translate(50%, -50%);
-          padding-left: 10px;
-        }
-
-        &:hover {
           .cart-icon {
-            background-color: lighten($primary, 10%);
+            background-color: $primary;
+            width: 55px;
+            height: 50px;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            position: relative;
+            left: 10px;
+
+            i {
+              margin-right: 5px;
+            }
+          }
+
+          .cart-counter {
+            height: 27px;
+            border-radius: 14px;
+            background-color: $header-bg;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            color: rgb(224, 227, 237);
+            padding: 0 10px;
+            position: relative;
+          }
+
+          &:hover {
+            .cart-icon {
+              background-color: lighten($primary, 10%);
+            }
           }
         }
       }
