--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -18,10 +18,10 @@
         <div class="col text-right">
           <ul>
             <li>
-              <a href="#"><i class="fas fa-user"></i> Login</a>
+              <a href="#"><i class="fas fa-user"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-lock"></i> Register</a>
+              <a href="#"><i class="fas fa-lock"></i></a>
             </li>
             <li>
               <a href="#"><i class="fas fa-bars"></i></a>
@@ -42,8 +42,10 @@
         </div>
         <div class="col text-right cart">
           <a href="#" class="cart-box">
-            <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
-            <div class="cart-counter">0</div>
+            <div class="box-line">
+              <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
+              <div class="cart-counter">123</div>
+            </div>
           </a>
         </div>
       </div>
