--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -55,11 +55,17 @@
         <div class="col">
           <form action="" class="search-form">
             <div class="category">
-              <i class="fas fa-list-ul"></i>
-              <select name="" id="">
-                <option value="">Select a category</option>
-              </select>
-              <i class="fas fa-caret-down"></i>
+              <ul>
+                <li>
+                  <i class="fas fa-list-ul"></i> Select a category
+                  <i class="fas fa-caret-down"></i>
+                  <ul>
+                    <li><a href="#">category 1</a></li>
+                    <li><a href="#">category 2</a></li>
+                    <li><a href="#">category 3</a></li>
+                  </ul>
+                </li>
+              </ul>
             </div>
             <div class="search-field">
               <input placeholder="Search products..." type="text" />
