--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -15,23 +15,25 @@
     </div>
     <div class="row">
       <div class="col-4">
-        <div class="post-box">
-          <div class="cover">
-            <div class="details">
-              <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
-              <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+        <a href="#">
+          <div class="post-box">
+            <div class="cover">
+              <div class="details">
+                <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
+                <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+              </div>
+            </div>
+            <div class="post-info">
+              <h5>Products That Fight Static</h5>
+              <p>
+                quam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
+                nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim
+                vehicula, rutrum magna in, ornare enim
+              </p>
             </div>
           </div>
-          <div class="post-info">
-            <h5>Products That Fight Static</h5>
-            <p>
-              Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
-              nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula,
-              rutrum magna in, ornare enim.
-            </p>
-            <div class="more"><a href="#" class="btn-main">Read more</a></div>
-          </div>
-        </div>
+        </a>
+        <div class="more"><button class="btn-main">Read more</button></div>
       </div>
       <div class="col-4">
         <div class="post-box">
