--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -176,6 +176,7 @@ header {
           color: $primary;
           position: absolute;
           left: 10px;
+          top: 12px;
           z-index: 0;
         }
 
@@ -185,15 +186,35 @@ header {
           z-index: 0;
         }
 
-        select {
-          -webkit-appearance: none;
-          border: 0;
-          background-color: transparent;
-          outline: none;
-          padding: 5px 30px 5px 35px;
-          font-size: 14px;
-          position: relative;
-          z-index: 1;
+        ul {
+          list-style-type: none;
+          margin-bottom: 0;
+          height: 100%;
+
+          li {
+            background-color: aqua;
+            border: 1px solid $form-border-color;
+            width: 100%;
+            height: 100%;
+            padding: 10px;
+            ul {
+              display: none;
+              li {
+                padding: 10px;
+              }
+            }
+            &:hover {
+              ul {
+                display: block;
+              }
+            }
+          }
+        }
+
+        li ul {
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
         }
       }
 
