--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -172,11 +172,12 @@ header {
         align-items: center;
         position: relative;
 
+        i {
+          padding: 0 5px;
+        }
+
         i:first-child {
           color: $primary;
-          position: absolute;
-          left: 10px;
-          top: 12px;
           z-index: 0;
         }
 
@@ -189,18 +190,23 @@ header {
         ul {
           list-style-type: none;
           margin-bottom: 0;
+          padding-left: 0;
           height: 100%;
-
+          width: 100%;
           li {
-            background-color: aqua;
-            border: 1px solid $form-border-color;
+            background-color: white;
             width: 100%;
             height: 100%;
-            padding: 10px;
+            padding: 9px 0;
             ul {
               display: none;
+              position: relative;
+              top: 11px;
               li {
-                padding: 10px;
+                text-align: center;
+                height: fit-content;
+                border: 1px solid $form-border-color;
+                border-top: none;
               }
             }
             &:hover {
