Adding recommendation from WDP190403-12 task

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -34,10 +34,7 @@
   <div class="company-claim">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col text-left phone-number">
-          <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
-        </div>
-        <div class="col text-center">
+        <div class="col text-left">
           <a href="#"><img src="./images/logo.png"/></a>
         </div>
         <div class="col text-right cart">
@@ -47,6 +44,9 @@
               <div class="cart-counter">123</div>
             </div>
           </a>
+          <div class="phone-number">
+            <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
+          </div>
         </div>
       </div>
     </div>
