--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -83,7 +83,8 @@
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
-              <div class="btn-main-small no-hover old-price">$ 30.00</div>
+            <div class="price">
+               <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -117,6 +118,9 @@
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
+            <div class="price">
+               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -147,6 +151,9 @@
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
+            <div class="price">
+               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -173,6 +180,9 @@
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price">
+               <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
@@ -237,6 +247,9 @@
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
+            <div class="price">
+               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
@@ -266,6 +279,9 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
+            <div class="price">
+               <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
