--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,10 @@
 $header-topbar-bg: #864343;
 $header-bg: #723636;
 
+$promoted-counter: #3e3e3e;
+$promoted-icon-grey: #b4b4b4;
+$promoted-line-grey: #dfe6e9;
+
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
